# Agent-Cultivation

./: .gitignore  README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sanrenxing/app/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/sanrenxing/app/navigation/: AppNavHost.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/core/common/: build.gradle.kts
android/core/database/: build.gradle.kts
android/core/datastore/: build.gradle.kts
android/core/model/: build.gradle.kts
android/core/network/: build.gradle.kts
android/core/ui/: build.gradle.kts
android/feature/battle/: build.gradle.kts
android/feature/chat/: build.gradle.kts
android/feature/profile/: build.gradle.kts
android/feature/social/: build.gradle.kts
android/feature/spirit/: build.gradle.kts
android/gradle/: libs.versions.toml
engine/agent-engine/: .env.example  pyproject.toml
engine/agent-engine/app/: dependencies.py  main.py
engine/agent-engine/app/routers/: battle.py  chat.py  spirit.py
engine/agent-engine/app/services/: embedding.py  judge_engine.py  llm_router.py  memory_manager.py  memory_writer.py  prompt_builder.py
infra/: docker-compose.yml
infra/migrations/: 000001_init.down.sql  000001_init.up.sql
services/battle-svc/: go.mod
services/battle-svc/cmd/server/: main.go
services/spirit-svc/: go.mod
services/spirit-svc/cmd/server/: main.go
services/user-svc/: go.mod
services/user-svc/cmd/server/: main.go
(+18 files in other folders)
