[project]
name = "agent-engine"
version = "0.1.0"
description = "FastAPI-based agent engine for Agent Cultivation game"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "qdrant-client>=1.12.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "nats-py>=2.9.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "tiktoken>=0.8.0",
    "numpy>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
